Work as a standalone docker service